--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="rodape"><img width="200px" src="Ingressos/logo.svg" /></div>
     <div id="centro" class="tituloo">
       <div id="textcentral">
-        <h1 id="titulo">REVIVA ÉPICO</h1>
+        <h1>REVIVA O ÉPICO</h1>
         <h2>DE 01 A 04 DE DEZEMBRO</h2>
         <p>
           Você consegue sentir? É aquela sensação de <br />
@@ -45,11 +45,32 @@
         <div id="subtempo"><h1>PARA MAIOR CCXP DE TODOS OS TEMPOS</h1></div>
 
         <div class="video">
-          <video width="700px" loop>
+          <video width="800px" loop>
             <source src="Arlequina.mp4" type="video/mp4" />
           </video>
         </div>
       </div>
     </div>
+    <div class="rodapee">
+      <h1>AINDA DA TEMPO DE GARANTIR O SEU, MAS CORRE!</h1>
+      <div class="ingressos">
+        <div id="roxo">
+          <img src="Ingressos/roxo.svg" alt="" />
+        </div>
+        <div>
+          <img id="rosa" src="Ingressos/rosa.svg" alt="" />
+        </div>
+        <div>
+          <img id="amarelo" src="Ingressos/amarelo.svg" alt="" />
+        </div>
+        <div>
+          <img id="verde" src="Ingressos/verde.svg" alt="" />
+        </div>
+        <div id="botao">
+          <button type="button">GARANTA O SEU!</button>
+        </div>
+      </div>
+    </div>
+    <script src="script.js"></script>
   </body>
 </html>
